<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/smart_farm_n_saad_ferid"
                android:textColor="@color/color_app"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30sp"
                android:src="@drawable/logo_isett" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="Welcome Please sign in here"
                android:textColor="@color/color_app"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="25sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email : "
                android:textColor="@color/color_app"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="5sp"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/color_app"
                android:hint="exemple@gmail.com"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="Password : "
                android:textColor="@color/color_app"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35sp"
                android:layout_marginTop="5sp"
                android:drawableEnd="@drawable/baseline_123_24"
                android:drawableTint="@color/color_app"
                android:hint="********"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="Remenber Me"
                android:textColor="@color/color_app"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/go_to_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="10sp"
                android:text="@string/forgot_password"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/color_app"
                android:text="SIGN IN" />

            <TextView
                android:id="@+id/go_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/register_here"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>